--- a/content/projects/3dgenome_pt1/3dgenome_pt1.html
+++ b/content/projects/3dgenome_pt1/3dgenome_pt1.html
@@ -49,7 +49,7 @@
 <figure class="half">
     <img src="/content/projects/3dgenome/images/3dgenome-900-450-1.png">
     <img src="/content/projects/3dgenome/images/3dgenome-900-450-2.png">	
-    <figcaption>Directed graphs are a visual form our researchers found useful for static representation of genome structure complexity. We tested the viablity of these graphs as a means of interacting with and exploring structures.</figcaption>
+    <figcaption>Directed graphs are a visual form our researchers found useful for static representation of genome structure complexity. We tested the viablity of these graphs as a means of interacting with and exploring structures. (Source for left image: Guttman Lab)</figcaption>
 </figure>
 
 
