--- a/content/projects/geophysfluid/geophysfluid.html
+++ b/content/projects/geophysfluid/geophysfluid.html
@@ -12,7 +12,9 @@
     <p>
         I created a UX research interview protocol focused around figures in certain publications that Mark and his colleagues had identified as useful visual vocabulary for articulating concepts they wanted to further dive into with this application. These publications utilized a variety of visual media figures such as 2d graphs, maps, and animations that conveyed complex patterns in the interferometry data modeling process.<br><br>
         After documenting Mark and his colleagues’ desired use cases, I created a series of paper prototypes which composed elements of these figures into a UI. These prototype UI’s were iteratively validated against the use cases in subsequent interviews until we narrowed down an effective visual vocabulary with the right kinds of interaction designs to facilitate layered interrogation of the glacier flow models <br><br>
-        <figure>
+        <figure class="half">
+            <img src="/content/projects/geophysfluid/images/Geophysical-900-450-1.png">
+            <img src="/content/projects/geophysfluid/images/Geophysical-900-450-2.png">
             <figcaption>Paper prototypes demonstrating how multiple interaction designs could be composed into a singular application for visualizing models of glacier flow</figcaption>
         </figure>
     </p>
@@ -20,6 +22,7 @@
     <p>
         After the user research phase pinned down the necessary components and interactions, I worked with Matt to build out these functionalities in openFrameworks. Our application supported both 2D and 3D visualizations of terrain maps, alongside a variety of overlays and charts designed to facilitate interrogation of interesting features both in the imaging data and in the flow model created from that data.<br><br>
         <figure>
+            <img src="/content/projects/geophysfluid/images/Geophysical-900-450-3.png">
             <figcaption>Providing 2D and 3D visualization capabilities alongside features to inspect details of modeled data vs actual data across the topology of interest</figcaption>
         </figure>
     </p>
