--- a/content/projects/eegviz/eegviz.html
+++ b/content/projects/eegviz/eegviz.html
@@ -1,14 +1,14 @@
 <div id="content" class="page-content" itemprop="articleBody">
     <h3>Background:</h3>
     <p>
-        I worked as a Creative Technologist Intern at the data visualization studio Pitch Interactive during my final year of academic studies at UW Madison. My work with Pitch consisted of developing interactive visualization prototypes for a selection of neuroscience-adjacent projects that the studio was involved in. <br><br>
-        One of the main projects I worked on at Pitch was development of an artistic visualization framework for EEG data. Pitch had developed a relationship with Capacitor--a modern dance troupe interested in utilizing light projections of EEG data visualization in an upcoming performance. The dancers underwent EEG scans at the local UCSF facility to generate a corpus of data to be used for this purpose. <br><br>
+        I worked as a Creative Technologist Intern at the data visualization studio <a href="https://www.pitchinteractive.com/">Pitch Interactive</a> during my final year of academic studies at UW Madison. My work with Pitch consisted of developing interactive visualization prototypes for a selection of neuroscience-adjacent projects that the studio was involved in. <br><br>
+        One of the main projects I worked on at Pitch was development of an artistic visualization framework for EEG data. Pitch had developed a relationship with <a href="https://www.capacitor.org/">Capacitor</a>--a modern dance troupe interested in utilizing light projections of EEG data visualization in an upcoming performance. The dancers underwent EEG scans at the local UCSF facility to generate a corpus of data to be used for this purpose. <br><br>
         Over the course of several weeks, I created an extensible Java application that could accept arbitrary time dimensional EEG input streams and output simple geometry-based visuals with GLSL shader effects. <br><br>
     </p>
     <h3>Process:</h3>
     <p>
         I cleaned and normalized the raw EEG data in R, removing erroneous outlier values and standardizing the activation range across each of the electrodes used in the scan.<br><br>
-        Once the data was clean I began building the components of the application. In order to allow for smooth, “Youtube-style” scrubbing interaction with the electrode time series, I created a custom fork of Till Nagel’s “Animated Time Range Slider for Processing” that supports nanosecond durations and non-range time increments.<br><br>
+        Once the data was clean I began building the components of the application. In order to allow for smooth, “Youtube-style” scrubbing interaction with the electrode time series, I created a custom fork of <a href="https://github.com/tillnagel/timerangeslider">Till Nagel’s “Animated Time Range Slider for Processing”</a> that supports nanosecond durations and non-range time increments. My contribution was PR'ed and added as a core functionality of the Time Slider.<br><br>
         <figure style="width: 60%; display: block; margin-left: auto; margin-right: auto;" >
             <img src="/content/projects/eegviz/images/eegviz_timeslider.png">
             <figcaption>My customized version of Till Nagel's Time Range Slider</figcaption>
@@ -24,6 +24,7 @@
     </p>
     <h3>Impact:</h3>
     <p>
-        By making the shaders and geometry rendering capabilities as modular functions, this application enabled other members of the studio to rapidly test new ideas for visuals with the same EEG data. This application was then used after my internship ended to iterate versions of the visual projections that were eventually used in Capacitor’s “Synaptic Motion” performance.<br><br>
+        By making the shaders and geometry rendering capabilities as modular functions, this application enabled other members of the studio to rapidly test new ideas for visuals with the same EEG data. This application was then used after my internship ended to iterate versions of the visual projections that were eventually used in <a href="https://www.capacitor.org/synaptic-motion">Capacitor’s “Synaptic Motion” performance</a>.<br><br>
+        I was also able to make a contribution to the open source Processing community through my fork of the Time Range Slider, which was a fulfilling opportunity given Processing's pivotal role in educating creative technologists.<br><br>
     </p>
 </div>
