more page updates

--- a/content/projects/3dgenome_pt3/3dgenome_pt3.html
+++ b/content/projects/3dgenome_pt3/3dgenome_pt3.html
@@ -48,10 +48,10 @@
 <h3>Impact:</h3>
 <p>
     This new compositional UI was a huge improvement over the previous workflow which required multiple tools. As users began to explore datasets and model predictions in this view, it began to provoke new types of discussion about model engineering and the types of insight comparative analysis could yield.<br><br>
-    Upon spending some time visualizing 3D structures and predictions in the new UI, one of the Ma Lab postdocs made an interesting observation:
+    Upon spending some time visualizing 3D structures and predictions in the new UI, one of the Ma Lab postdocs made an interesting observation (emphasis added):
     <blockquote>
         <p>
-            Selecting and zooming into pairs of regions on the Hi-C matrix is very interesting because it allows us to think about interactions at different scales. When we were able to put a 3d model in the mix, the structure could disagree with the matrix because the matrix is population average data but the 3d structure represents a simulation of a single cell. In the future everything will be single cell; single cell Hi-C sequencing is becoming easier. Being able to view the model predictions on a single cell scale with the 3D structure would be so powerful.
+            Selecting and zooming into pairs of regions on the Hi-C matrix is very interesting because it allows us to think about interactions at different scales. When we were able to put a 3d model in the mix, <strong>the structure could disagree with the matrix because the matrix is population average data but the 3d structure represents a simulation of a single cell.</strong> In the future everything will be single cell; single cell Hi-C sequencing is becoming easier. <strong>Being able to view the model predictions on a single cell scale with the 3D structure would be so powerful</strong>.
         </p>
     </blockquote>
     </p>
